--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,6 +61,14 @@ body {
     padding: 0;
 }
 
+button {
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    color: inherit;
+    font-family: inherit;
+}
+
 h1,h2,h3,h4,h5 {
     font-size: 100%;
     font-weight: inherit;
