chore: save svg option

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 :root {
     --font-read: 'Roboto Mono', monospace;
     --c-black: #000C22;
-    --background: var(--c-black);
+    --c-background: var(--c-black);
     --c-one: #FC5FFF;
     --c-two: #29E818;
     --c-three: #608CFF;
