chore: mix up grey

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,9 +29,10 @@
         --c-background: rgb(44, 44, 44);
         --c-one: #9c9c9c;
         --c-two: #d0d0d0;
-        --c-three: #1a191b;
+        --c-three: #ffffff;
         --c-four: #717171;
-        --c-five:  #ffffff;
+        --c-five:  #dbdbdb;
+        --c-five:  #1a191b;
         --c-six: #161719;
     }
 }
