--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,6 +53,13 @@
         --c-four: #d500f9;
         --c-five: #651fff;
         --c-six: #3d5afe;
+        svg {
+            path,
+            rect,
+            circle {
+                filter: drop-shadow(0px 0px 3px blue) drop-shadow(0px 0px 3px blue);
+            }
+        }
     }
 }
 
