--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,7 @@
             path,
             rect,
             circle {
-                filter: drop-shadow(0px 0px 3px blue) drop-shadow(0px 0px 3px blue);
+                filter: drop-shadow(0px 0px 6px rgb(47, 47, 255));
             }
         }
     }
