Chore: def tweaks

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,14 @@
         --c-four: #edafa9;
         --c-five: #ffd180;
         --c-six: #ff4081;
+        .menu {
+            .btn:not(.themes),
+            .content {
+                backdrop-filter: none;
+                background: rgba(40, 40, 40, 0.9);
+                backdrop-filter: blur(3px);
+            }
+        }
     }
     &.dull {
         --c-black: black;
@@ -35,6 +43,7 @@
         --c-six: #161719;
  
         .menu {
+            --c-five: var(--c-one);
             .btn:not(.themes),
             .content {
                 backdrop-filter: none;
