--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,17 @@
     --c-five: goldenrod;
     --c-six: red;
 
+    &.default {
+        .menu {
+            .btn:not(.themes),
+            .content {
+                --c-three: green;
+                backdrop-filter: none;
+                background: var(--c-background);
+              
+            }
+        }
+    }
     &.matt {
         --c-black: #333;
         --c-background: rgb(40, 40, 40);
@@ -26,7 +37,6 @@
         .menu {
             .btn:not(.themes),
             .content {
-                backdrop-filter: none;
                 background: rgba(40, 40, 40, 0.9);
                 backdrop-filter: blur(3px);
             }
