--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -173,6 +173,7 @@ html {
     -webkit-text-size-adjust: 100%;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    touch-action: none;
 }
 
 body {
