chore: allow to reach overlapped anchor points

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,10 @@
     --hover-anchor-stroke-width: 0.6;
 }
 
+.pointer-events-stroke path {
+    pointer-events: stroke;
+}
+
 #theme {
     --c-black: #000C22;
     --c-background: var(--c-black);
